// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input wp-components-search-input css-1ez28hr"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    autocomplete="off"
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="search"
    placeholder="Search..."
    prefix="[object Object]"
    spellcheck="false"
    type="search"
    value=""
  />
</div>
`;

exports[`props should render isLoading 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input wp-components-search-input css-1ez28hr"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    autocomplete="off"
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="search"
    placeholder="Search..."
    prefix="[object Object]"
    spellcheck="false"
    type="search"
    value=""
  />
</div>
`;

exports[`props should render placeholder 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input wp-components-search-input css-1ez28hr"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    autocomplete="off"
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="search"
    placeholder="Searching for..."
    prefix="[object Object]"
    spellcheck="false"
    type="search"
    value=""
  />
</div>
`;

exports[`props should render prefix 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input wp-components-search-input css-1ez28hr"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    autocomplete="off"
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="search"
    placeholder="Search..."
    prefix="[object Object]"
    spellcheck="false"
    type="search"
    value=""
  />
</div>
`;

exports[`props should render suffix 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input wp-components-search-input css-1ez28hr"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    autocomplete="off"
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="search"
    placeholder="Search..."
    prefix="[object Object]"
    spellcheck="false"
    type="search"
    value=""
  />
</div>
`;

exports[`props should render value 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input wp-components-search-input css-1ez28hr"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    autocomplete="off"
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="search"
    placeholder="Search..."
    prefix="[object Object]"
    spellcheck="false"
    type="search"
    value="q"
  />
</div>
`;
